--- a/html/src/main/webapp/index.html
+++ b/html/src/main/webapp/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>ld37</title>
-  </head>
-  <body bgcolor="black">
-    <script src="ld37/ld37.nocache.js"></script>
-  </body>
+</head>
+<body bgcolor="black" style="position:absolute;margin:0;width:100%;height:100%;overflow: hidden">
+<script src="ld37/ld37.nocache.js"></script>
+<div id="playn-root" style="width:100%;height:100%">
+</div>
+</body>
 </html>
